--- a/.github/workflows/gradle-testDebug.yml
+++ b/.github/workflows/gradle-testDebug.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 11
+          distribution: temurin
       - uses: gradle/gradle-build-action@v2
         with:
           arguments: testDebug
