use java version 11 because why not (#12)
use java version 11 because why not, also add distribution and add cache

--- a/.github/workflows/gradle-testDebug.yml
+++ b/.github/workflows/gradle-testDebug.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 11
+          distribution: temurin
+          cache: 'gradle'
       - uses: gradle/gradle-build-action@v2
         with:
           arguments: testDebug
