--- a/testomania/src/main/AndroidManifest.xml
+++ b/testomania/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.earth.testomania">
 
     <application
+        android:name=".TestomaniaApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
