--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -84,5 +84,15 @@ dependencies {
     implementation "androidx.room:room-ktx:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
 
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //Moshi
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 }
