--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
 }
 
 android {
@@ -68,7 +67,9 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.6'
     testImplementation group: 'com.google.dagger', name: 'hilt-android-testing', version: '2.41'
     kaptTest 'com.google.dagger:hilt-android-compiler:2.41'
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+    
+    implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.13.0")
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
