--- a/testomania/src/main/AndroidManifest.xml
+++ b/testomania/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.earth.testomania">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".TestomaniaApp"
         android:allowBackup="true"
