--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -99,4 +99,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
+
+    implementation "io.coil-kt:coil-compose:2.0.0-rc02"
+
 }
