--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     implementation 'io.github.raamcosta.compose-destinations:core:1.4.3-beta'
     implementation 'io.github.raamcosta.compose-destinations:animations-core:1.4.3-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.4.3-beta'
+    implementation "com.google.accompanist:accompanist-pager:0.19.0"
     implementation "kiwi.orbit.compose:ui:0.13.0"
 
     // Coroutines
