--- a/testomania/src/main/AndroidManifest.xml
+++ b/testomania/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
         android:theme="@style/Theme.Testomania">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Testomania.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
