--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id 'com.google.devtools.ksp' version '1.6.10-1.0.4'
+    id 'com.google.devtools.ksp' version '1.6.21-1.0.5'
 }
 
 android {
@@ -91,6 +91,7 @@ dependencies {
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.4.3-beta'
     implementation "com.google.accompanist:accompanist-pager:0.19.0"
     implementation "kiwi.orbit.compose:ui:0.13.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.8-beta"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
