--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -89,13 +89,14 @@ dependencies {
     implementation 'io.github.raamcosta.compose-destinations:core:1.4.3-beta'
     implementation 'io.github.raamcosta.compose-destinations:animations-core:1.4.3-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.4.3-beta'
-    implementation "com.google.accompanist:accompanist-pager:0.19.0"
+    implementation "com.google.accompanist:accompanist-pager:0.24.8-beta"
     implementation "kiwi.orbit.compose:ui:0.13.0"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.8-beta"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -109,7 +110,7 @@ dependencies {
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.robolectric:robolectric:4.6'
+    testImplementation 'org.robolectric:robolectric:4.8.1'
     testImplementation group: 'com.google.dagger', name: 'hilt-android-testing', version: '2.41'
     kaptTest 'com.google.dagger:hilt-android-compiler:2.41'
     testImplementation "com.google.truth:truth:1.1.3"
