--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.earth.testomania"
         minSdk 23
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -63,9 +63,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -90,9 +90,14 @@ dependencies {
     implementation 'io.github.raamcosta.compose-destinations:animations-core:1.4.3-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.4.3-beta'
     implementation "com.google.accompanist:accompanist-pager:0.24.8-beta"
-    implementation "kiwi.orbit.compose:ui:0.14.0"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.8-beta"
+
+    // Kiwi Design System
+    def kiwi = "0.15.1"
+    implementation "kiwi.orbit.compose:ui:$kiwi"
+    implementation "kiwi.orbit.compose:illustrations:$kiwi"
+    implementation "kiwi.orbit.compose:icons:$kiwi"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
@@ -111,14 +116,14 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.8.1'
-    testImplementation group: 'com.google.dagger', name: 'hilt-android-testing', version: '2.41'
-    kaptTest 'com.google.dagger:hilt-android-compiler:2.41'
+    testImplementation group: 'com.google.dagger', name: 'hilt-android-testing', version: '2.42'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.42'
     testImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 
     implementation "io.coil-kt:coil-compose:2.0.0-rc02"
 
