--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.2.0-rc03'
+        compose_version = '1.3.0-alpha01'
         hilt_version = '2.42'
     }
     repositories {
