--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -75,6 +75,7 @@ dependencies {
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
 
     // Serialization
     implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
