--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -28,6 +28,10 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            ext.alwaysUpdateBuildId = false //for build optimization
+            ext.enableCrashlytics = false //for build optimization
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
