--- a/testomania/src/main/AndroidManifest.xml
+++ b/testomania/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
                 android:resource="@xml/shortcuts" />
 
         </activity>
+
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="false" />
     </application>
 
 </manifest>
