Preparation for next release (#135)
* Removed arrow on result screen

* Added skip text to primary button

* fix test name & icon

* closeAboutBottomSheetOnOutsideTouch

* optimize build time

* added shrinkResources

* Fixed bottomsheet close problem on outside of bottomsheet, by replacing bottomsheetscafold with ModalBottomSheetLayout

Co-authored-by: kartlos diakonidze <kartlos99@yahoo.com>

--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -26,7 +26,12 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            ext.alwaysUpdateBuildId = false //for build optimization
+            ext.enableCrashlytics = false //for build optimization
         }
     }
     compileOptions {
