--- a/.github/workflows/gradle-buildRelease.yml
+++ b/.github/workflows/gradle-buildRelease.yml
@@ -20,8 +20,8 @@ jobs:
           distribution: temurin
           cache: 'gradle'
       - name: 'update google services json'
-        with:
-          service_json: ${{ secrets.GOOGLE_CRASHLITYCS }}
+        #        with:
+        #          service_json: ${{ secrets.GOOGLE_CRASHLITYCS }}
         run: echo $SERVICE_JSON > testomania/google-services.json
       - name: 'Create keystore file'
         with:
