--- a/.github/workflows/gradle-buildRelease.yml
+++ b/.github/workflows/gradle-buildRelease.yml
@@ -22,6 +22,7 @@ jobs:
       - name: 'update google services json'
         #        with:
         #          service_json: ${{ secrets.GOOGLE_CRASHLITYCS }}
+        shell: bash
         run: echo $SERVICE_JSON > testomania/google-services.json
       - name: 'Create keystore file'
         with:
