--- a/.github/workflows/gradle-buildRelease.yml
+++ b/.github/workflows/gradle-buildRelease.yml
@@ -20,13 +20,9 @@ jobs:
           distribution: temurin
           cache: 'gradle'
       - name: 'update google services json'
-        #        with:
-        #          service_json: ${{ secrets.GOOGLE_CRASHLITYCS }}
-        shell: bash
-
-
-
-        run: echo $SERVICE_JSON > testomania/google-services.json
+        with:
+          service_json: ${{ secrets.GOOGLE_CRASHLITYCS }}
+        run: 'echo $SERVICE_JSON > testomania/google-services.json'
       - name: 'Create keystore file'
         with:
           file: ${{ secrets.KEYSTORE_FILE }}
