--- a/.github/workflows/gradle-buildRelease.yml
+++ b/.github/workflows/gradle-buildRelease.yml
@@ -20,7 +20,9 @@ jobs:
       - name: 'update google services json'
         env:
           service_json: ${{ secrets.GOOGLE_CRASHLITYCS }}
-        run: 'echo $SERVICE_JSON > testomania/google-services.json'
+        run: |
+          'echo $SERVICE_JSON > testomania/google-services.json'
+          'cat testomania/google-services.json'
       - name: 'Create keystore file'
         env:
           file: ${{ secrets.KEYSTORE_FILE }}
