--- a/.github/workflows/gradle-buildRelease.yml
+++ b/.github/workflows/gradle-buildRelease.yml
@@ -27,6 +27,8 @@ jobs:
           file: ${{ secrets.KEYSTORE_FILE }}
         run: |
           echo $FILE | base64 --decode > private_key.jks
+          pwd
+          ls
       - name: 'Build native executables'
         uses: gradle/gradle-build-action@v2
         with:
