--- a/.github/workflows/gradle-buildRelease.yml
+++ b/.github/workflows/gradle-buildRelease.yml
@@ -26,8 +26,13 @@ jobs:
         env:
           file: ${{ secrets.KEYSTORE_FILE }}
         run: |
-          echo $FILE | base64 --decode > keystore.jks
+          echo $FILE | base64 --decode > kee1
           md5sum keystore.jks
+      - name: 'Upload artifacts'
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifacts
+          path: kee1
       - name: 'Build native executables'
         uses: gradle/gradle-build-action@v2
         with:
