--- a/.github/workflows/gradle-buildRelease.yml
+++ b/.github/workflows/gradle-buildRelease.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           name: artifacts
           path: |
-            ./testomania/build/outputs/bundle/release/*
+            testomania/google-services.json
