--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -112,12 +112,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.24.8-beta"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.8-beta"
-
-    // Kiwi Design System
-    def kiwi = "0.16.0"
-    implementation "kiwi.orbit.compose:ui:$kiwi"
-    implementation "kiwi.orbit.compose:illustrations:$kiwi"
-    implementation "kiwi.orbit.compose:icons:$kiwi"
+    
+    implementation(libs.bundles.kiwi)
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
@@ -128,10 +124,8 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
-    // Room
-    implementation "androidx.room:room-runtime:2.4.2"
-    implementation "androidx.room:room-ktx:2.4.2"
-    kapt "androidx.room:room-compiler:2.4.2"
+    implementation(libs.bundles.androidx.room)
+    kapt(libs.androidx.room.compiler)
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
