--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -141,11 +141,8 @@ dependencies {
 
     implementation "androidx.navigation:navigation-compose:2.5.0"
 
-    implementation "io.coil-kt:coil-compose:2.1.0"
-
-    implementation platform('com.google.firebase:firebase-bom:30.3.0')
-    implementation 'com.google.firebase:firebase-crashlytics'
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation(libs.coil)
+    implementation(libs.bundles.firebase)
 
 }
 
