--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -101,17 +101,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
     // Compose dependencies
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
-    implementation 'io.github.raamcosta.compose-destinations:core:1.4.4-beta'
-    implementation 'io.github.raamcosta.compose-destinations:animations-core:1.4.4-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.4.4-beta'
-    implementation "com.google.accompanist:accompanist-pager:0.24.8-beta"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.8-beta"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
     
     implementation(libs.bundles.kiwi)
 
@@ -143,6 +134,7 @@ dependencies {
 
     implementation(libs.coil)
     implementation(libs.bundles.firebase)
+    implementation(libs.bundles.androidx-compose)
 
 }
 
