--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -10,12 +10,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.earth.testomania"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 3
         versionName "1.1"
 
@@ -134,7 +134,7 @@ dependencies {
 
     implementation(libs.coil)
     implementation(libs.bundles.firebase)
-    implementation(libs.bundles.androidx-compose)
+    implementation(libs.bundles.androidx.compose)
 
 }
 
