--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,8 +18,10 @@ androidx-compose-ui = "androidx.compose.ui:ui:1.3.0-alpha01"
 androidx-compose-material = "androidx.compose.material:material:1.3.0-beta01"
 androidx-compose-material-icons-extended = "androidx.compose.material:material-icons-extended:1.3.0-alpha01"
 androidx-compose-constraintlayout = "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-androidx-compose-raamcosta-destinations = 'io.github.raamcosta.compose-destinations:core:1.4.4-beta'
-androidx-compose-raamcosta-destinations-animations = 'io.github.raamcosta.compose-destinations:animations-core:1.4.4-beta'
+
+raamcosta-destinations = 'io.github.raamcosta.compose-destinations:core:1.4.4-beta'
+raamcosta-destinations-animations = 'io.github.raamcosta.compose-destinations:animations-core:1.4.4-beta'
+raamcosta-destinations-ksp = 'io.github.raamcosta.compose-destinations:ksp:1.4.4-beta'
 
 androidx-lifecycle = "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 androidx-compose-activity = "androidx.activity:activity-compose:1.5.1"
@@ -34,6 +36,8 @@ androidx-room-compiler = "androidx.room:room-runtime:2.4.2"
 
 google-material = "com.google.android.material:material:1.6.1"
 google-hilt = "com.google.dagger:hilt-android:2.42"
+google-hilt-androidCompiler = "com.google.dagger:hilt-android-compiler:2.42"
+google-hilt-compiler = "androidx.hilt:hilt-compiler:1.0.0"
 
 accompanist-systemuicontroller = "com.google.accompanist:accompanist-systemuicontroller:0.24.8-beta"
 accompanist-pager = "com.google.accompanist:accompanist-pager:0.24.8-beta"
@@ -51,6 +55,7 @@ retrofit-logging-interceptor = "com.squareup.okhttp3:logging-interceptor:4.10.0"
 
 moshi-core = "com.squareup.moshi:moshi-kotlin:1.13.0"
 moshi-converter = "com.squareup.retrofit2:converter-moshi:2.9.0"
+moshi-codegen = "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
 
 coroutines-core = 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
 coroutines-android = 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
@@ -107,8 +112,8 @@ androidx-compose = [
     "androidx-compose-viewmodel-lifecycle",
     "androidx-compose-navigation-hilt",
     "androidx-compose-constraintlayout",
-    "androidx-compose-raamcosta-destinations",
-    "androidx-compose-raamcosta-destinations-animations"
+    "raamcosta-destinations",
+    "raamcosta-destinations-animations"
 ]
 
 retrofit = [
