--- a/.github/workflows/gradle-bundleRelease.yml
+++ b/.github/workflows/gradle-bundleRelease.yml
@@ -46,7 +46,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1.1.1
         with:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_API_ACCESS }}
-          packageName: com.sohohouse.seven
+          packageName: com.earth.testomania
           releaseFiles: testomania/build/outputs/bundle/release/testomania-release.aab
           track: alpha
           status: completed
